# Container-Security-Visualizer

./: .env.example  .gitignore  CMakeLists.txt  LICENSE  README.md  audit.md  docker-compose.yml  enhance-plan.md  index.html  package-lock.json  setup.py  start_all.sh
backend/: Dockerfile  config.py  database.py  main.py  requirements.txt  test_database.py  test_websocket.py
backend/api/: __init__.py  alerts.py  analytics.py  containers.py  events.py  query.py  stats.py  websocket.py
backend/migrations/: env.py
backend/models/: __init__.py  event.py
backend/schemas/: __init__.py  event.py  response.py
backend/services/: __init__.py  analytics.py  broadcast_manager.py  event_processor.py
backend/test/: test_config.py  test_schemas.py
backend/utils/: __init__.py  logger.py
collector/: Dockerfile  collector.py  event_enricher.py  output_adapter.py  test_config.py
config/: backend_config.yaml  config.yaml
docs/: event_schema.json
ebpf/: README.md  net_monitor.c  net_monitor.py  syscall_monitor.c  syscall_monitor.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertsPanel.tsx  ConnectionStatus.tsx  EventTimeline.tsx  FiltersPanel.tsx  (+2 more)
src/: index.css
src/components/: AlertsPanel.tsx  ConnectionStatus.tsx  EventTimeline.tsx  FiltersPanel.tsx  GraphView.tsx  HistoricalView.tsx
src/hooks/: useWebSocket.ts
src/lib/: api.ts
src/pages/: Index.tsx
utilities/: __init__.py  config_loader.py  docker_utils.py  syscall_utils.py
(+5 files in other folders)
